<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context=".activity.MainActivity">

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_margin="18dp"
                android:text="@string/locationSample"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:contentDescription="@string/locationSample"
                android:src="@drawable/location"
                app:layout_constraintBottom_toBottomOf="@+id/location_text"
                app:layout_constraintEnd_toStartOf="@+id/location_text"
                app:layout_constraintTop_toTopOf="@+id/location_text" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/dropdown"
                android:src="@drawable/arrow_down"
                app:layout_constraintBottom_toBottomOf="@+id/location_text"
                app:layout_constraintStart_toEndOf="@+id/location_text"
                app:layout_constraintTop_toTopOf="@+id/location_text" />

            <ImageView
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:contentDescription="@string/filter"
                android:src="@drawable/filter"
                app:layout_constraintBottom_toBottomOf="@+id/location_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/location_text" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="18dp"
                android:text="@string/selectCategory"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_text" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginEnd="33dp"
                android:text="@string/viewAll"
                android:textColor="@color/primary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoriesRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="27dp"
                android:paddingEnd="27dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:itemCount="5"
                tools:listitem="@layout/category_item" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/rounded_background"
                android:elevation="10dp"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoriesRecycler" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/search"
                android:elevation="10dp"
                android:src="@drawable/search"
                app:layout_constraintBottom_toBottomOf="@id/textInputEditText"
                app:layout_constraintStart_toStartOf="@+id/textInputEditText"
                app:layout_constraintTop_toTopOf="@id/textInputEditText" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginEnd="37dp"
                android:background="@drawable/ellipse"
                android:contentDescription="@string/phones"
                android:elevation="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/qr"
                app:layout_constraintBottom_toBottomOf="@+id/textInputEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputEditText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="24dp"
                android:text="@string/hotSales"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginEnd="33dp"
                android:text="@string/seeMore"
                android:textColor="@color/primary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hotSalesRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:itemCount="3"
                tools:listitem="@layout/hot_sales_item" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="11dp"
                android:text="@string/bestSeller"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotSalesRecycler" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginEnd="33dp"
                android:text="@string/seeMore"
                android:textColor="@color/primary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bestSellerRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingBottom="74dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:spanCount="2"
                tools:itemCount="4"
                tools:listitem="@layout/best_seller_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded_background_secondary">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="68dp"
            android:background="@drawable/ellipse_white"
            android:contentDescription="@string/explorer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="7dp"
            android:text="@string/explorer"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:contentDescription="@string/explorer"
            android:src="@drawable/cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView9"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:background="@drawable/heart"
            android:contentDescription="@string/explorer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="67dp"
            android:background="@drawable/user"
            android:contentDescription="@string/explorer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>